src/libqlocale.h

typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QLocale QLocale;
typedef struct QTime QTime;
libqt_list /* of uint16_t */ QLocale_CountriesForLanguage(uint16_t lang);
void QLocale_SetNumberOptions(QLocale* self, int options);
int QLocale_NumberOptions(const QLocale* self);
libqt_string QLocale_QuoteString(const QLocale* self, libqt_string str);
libqt_string QLocale_CreateSeparatedList(const QLocale* self, libqt_list /* of libqt_string */ strl);
int16_t QLocale_ToShort2(const QLocale* self, libqt_string s, bool* ok);
uint16_t QLocale_ToUShort2(const QLocale* self, libqt_string s, bool* ok);
int QLocale_ToInt2(const QLocale* self, libqt_string s, bool* ok);
unsigned int QLocale_ToUInt2(const QLocale* self, libqt_string s, bool* ok);
long QLocale_ToLong2(const QLocale* self, libqt_string s, bool* ok);
unsigned long QLocale_ToULong2(const QLocale* self, libqt_string s, bool* ok);
long long QLocale_ToLongLong2(const QLocale* self, libqt_string s, bool* ok);
unsigned long long QLocale_ToULongLong2(const QLocale* self, libqt_string s, bool* ok);
float QLocale_ToFloat2(const QLocale* self, libqt_string s, bool* ok);
double QLocale_ToDouble2(const QLocale* self, libqt_string s, bool* ok);
libqt_string QLocale_ToString22(const QLocale* self, double f, char format);
libqt_string QLocale_ToString32(const QLocale* self, double f, char format, int precision);
libqt_string QLocale_ToString23(const QLocale* self, float f, char format);
libqt_string QLocale_ToString33(const QLocale* self, float f, char format, int precision);
libqt_string QLocale_ToString24(const QLocale* self, QDate* date, int format);
libqt_string QLocale_ToString25(const QLocale* self, QTime* time, int format);
libqt_string QLocale_ToString26(const QLocale* self, QDateTime* dateTime, int format);
libqt_string QLocale_DateFormat1(const QLocale* self, int format);
libqt_string QLocale_TimeFormat1(const QLocale* self, int format);
libqt_string QLocale_DateTimeFormat1(const QLocale* self, int format);
QDate* QLocale_ToDate22(const QLocale* self, libqt_string stringVal, int param2);
QTime* QLocale_ToTime22(const QLocale* self, libqt_string stringVal, int param2);
QDateTime* QLocale_ToDateTime22(const QLocale* self, libqt_string stringVal, int format);
libqt_string QLocale_MonthName2(const QLocale* self, int param1, int format);
libqt_string QLocale_StandaloneMonthName2(const QLocale* self, int param1, int format);
libqt_string QLocale_DayName2(const QLocale* self, int param1, int format);
libqt_string QLocale_StandaloneDayName2(const QLocale* self, int param1, int format);
libqt_string QLocale_CurrencySymbol1(const QLocale* self, int param1);
libqt_string QLocale_ToCurrencyString2(const QLocale* self, long long param1, libqt_string symbol);
libqt_string QLocale_ToCurrencyString22(const QLocale* self, unsigned long long param1, libqt_string symbol);
libqt_string QLocale_ToCurrencyString23(const QLocale* self, int16_t i, libqt_string symbol);
libqt_string QLocale_ToCurrencyString24(const QLocale* self, uint16_t i, libqt_string symbol);
libqt_string QLocale_ToCurrencyString25(const QLocale* self, int i, libqt_string symbol);
libqt_string QLocale_ToCurrencyString26(const QLocale* self, unsigned int i, libqt_string symbol);
libqt_string QLocale_ToCurrencyString27(const QLocale* self, double param1, libqt_string symbol);
libqt_string QLocale_ToCurrencyString3(const QLocale* self, double param1, libqt_string symbol, int precision);
libqt_string QLocale_ToCurrencyString28(const QLocale* self, float i, libqt_string symbol);
libqt_string QLocale_ToCurrencyString32(const QLocale* self, float i, libqt_string symbol, int precision);
libqt_string QLocale_FormattedDataSize2(const QLocale* self, long long bytes, int precision);
libqt_string QLocale_FormattedDataSize3(const QLocale* self, long long bytes, int precision, int format);
libqt_string QLocale_LanguageToCode2(uint16_t language, int codeTypes);
libqt_string QLocale_QuoteString2(const QLocale* self, libqt_string str, int style);