src/qt/libqlocale.bf

	[LinkName("QLocale_CountriesForLanguage")]
	public static extern int64[] QLocale_CountriesForLanguage(int64 lang);
	[LinkName("QLocale_SetNumberOptions")]
	public static extern void QLocale_SetNumberOptions(Self* c_this, int64 options);
	[LinkName("QLocale_NumberOptions")]
	public static extern int64 QLocale_NumberOptions(Self* c_this);
	[LinkName("QLocale_QuoteString")]
	public static extern libqt_string QLocale_QuoteString(Self* c_this, libqt_string str);
	[LinkName("QLocale_CreateSeparatedList")]
	public static extern libqt_string QLocale_CreateSeparatedList(Self* c_this, libqt_string[] strl);
	[LinkName("QLocale_ToShort2")]
	public static extern int16 QLocale_ToShort2(Self* c_this, libqt_string s, bool* ok);
	[LinkName("QLocale_ToUShort2")]
	public static extern uint16 QLocale_ToUShort2(Self* c_this, libqt_string s, bool* ok);
	[LinkName("QLocale_ToInt2")]
	public static extern int32 QLocale_ToInt2(Self* c_this, libqt_string s, bool* ok);
	[LinkName("QLocale_ToUInt2")]
	public static extern uint32 QLocale_ToUInt2(Self* c_this, libqt_string s, bool* ok);
	[LinkName("QLocale_ToLong2")]
	public static extern c_long QLocale_ToLong2(Self* c_this, libqt_string s, bool* ok);
	[LinkName("QLocale_ToULong2")]
	public static extern c_ulong QLocale_ToULong2(Self* c_this, libqt_string s, bool* ok);
	[LinkName("QLocale_ToLongLong2")]
	public static extern int64 QLocale_ToLongLong2(Self* c_this, libqt_string s, bool* ok);
	[LinkName("QLocale_ToULongLong2")]
	public static extern uint64 QLocale_ToULongLong2(Self* c_this, libqt_string s, bool* ok);
	[LinkName("QLocale_ToFloat2")]
	public static extern float QLocale_ToFloat2(Self* c_this, libqt_string s, bool* ok);
	[LinkName("QLocale_ToDouble2")]
	public static extern double QLocale_ToDouble2(Self* c_this, libqt_string s, bool* ok);
	[LinkName("QLocale_ToString22")]
	public static extern libqt_string QLocale_ToString22(Self* c_this, double f, int8 format);
	[LinkName("QLocale_ToString32")]
	public static extern libqt_string QLocale_ToString32(Self* c_this, double f, int8 format, int32 precision);
	[LinkName("QLocale_ToString23")]
	public static extern libqt_string QLocale_ToString23(Self* c_this, float f, int8 format);
	[LinkName("QLocale_ToString33")]
	public static extern libqt_string QLocale_ToString33(Self* c_this, float f, int8 format, int32 precision);
	[LinkName("QLocale_ToString24")]
	public static extern libqt_string QLocale_ToString24(Self* c_this, QDate date, int64 format);
	[LinkName("QLocale_ToString25")]
	public static extern libqt_string QLocale_ToString25(Self* c_this, QTime time, int64 format);
	[LinkName("QLocale_ToString26")]
	public static extern libqt_string QLocale_ToString26(Self* c_this, QDateTime* dateTime, int64 format);
	[LinkName("QLocale_DateFormat1")]
	public static extern libqt_string QLocale_DateFormat1(Self* c_this, int64 format);
	[LinkName("QLocale_TimeFormat1")]
	public static extern libqt_string QLocale_TimeFormat1(Self* c_this, int64 format);
	[LinkName("QLocale_DateTimeFormat1")]
	public static extern libqt_string QLocale_DateTimeFormat1(Self* c_this, int64 format);
	[LinkName("QLocale_ToDate22")]
	public static extern QDate QLocale_ToDate22(Self* c_this, libqt_string stringVal, int64 param2);
	[LinkName("QLocale_ToTime22")]
	public static extern QTime QLocale_ToTime22(Self* c_this, libqt_string stringVal, int64 param2);
	[LinkName("QLocale_ToDateTime22")]
	public static extern QDateTime QLocale_ToDateTime22(Self* c_this, libqt_string stringVal, int64 format);
	[LinkName("QLocale_MonthName2")]
	public static extern libqt_string QLocale_MonthName2(Self* c_this, int32 param1, int64 format);
	[LinkName("QLocale_StandaloneMonthName2")]
	public static extern libqt_string QLocale_StandaloneMonthName2(Self* c_this, int32 param1, int64 format);
	[LinkName("QLocale_DayName2")]
	public static extern libqt_string QLocale_DayName2(Self* c_this, int32 param1, int64 format);
	[LinkName("QLocale_StandaloneDayName2")]
	public static extern libqt_string QLocale_StandaloneDayName2(Self* c_this, int32 param1, int64 format);
	[LinkName("QLocale_CurrencySymbol1")]
	public static extern libqt_string QLocale_CurrencySymbol1(Self* c_this, int64 param1);
	[LinkName("QLocale_ToCurrencyString2")]
	public static extern libqt_string QLocale_ToCurrencyString2(Self* c_this, int64 param1, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString22")]
	public static extern libqt_string QLocale_ToCurrencyString22(Self* c_this, uint64 param1, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString23")]
	public static extern libqt_string QLocale_ToCurrencyString23(Self* c_this, int16 i, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString24")]
	public static extern libqt_string QLocale_ToCurrencyString24(Self* c_this, uint16 i, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString25")]
	public static extern libqt_string QLocale_ToCurrencyString25(Self* c_this, int32 i, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString26")]
	public static extern libqt_string QLocale_ToCurrencyString26(Self* c_this, uint32 i, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString27")]
	public static extern libqt_string QLocale_ToCurrencyString27(Self* c_this, double param1, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString3")]
	public static extern libqt_string QLocale_ToCurrencyString3(Self* c_this, double param1, libqt_string symbol, int32 precision);
	[LinkName("QLocale_ToCurrencyString28")]
	public static extern libqt_string QLocale_ToCurrencyString28(Self* c_this, float i, libqt_string symbol);
	[LinkName("QLocale_ToCurrencyString32")]
	public static extern libqt_string QLocale_ToCurrencyString32(Self* c_this, float i, libqt_string symbol, int32 precision);
	[LinkName("QLocale_FormattedDataSize2")]
	public static extern libqt_string QLocale_FormattedDataSize2(Self* c_this, int64 bytes, int32 precision);
	[LinkName("QLocale_FormattedDataSize3")]
	public static extern libqt_string QLocale_FormattedDataSize3(Self* c_this, int64 bytes, int32 precision, int64 format);
	[LinkName("QLocale_LanguageToCode2")]
	public static extern libqt_string QLocale_LanguageToCode2(int64 language, int64 codeTypes);
	[LinkName("QLocale_QuoteString2")]
	public static extern libqt_string QLocale_QuoteString2(Self* c_this, libqt_string str, int64 style);
}